// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PollTitle (form) should match snapshot (author) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Untitled"
    value=""
  />
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`PollTitle (form) should match snapshot (default) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Untitled"
    value=""
  />
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`PollTitle (view) should match snapshot (author) 1`] = `
<div
  className="u-align-center"
>
  <h1
    className="u-margin-half"
  >
    Untitled
  </h1>
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`PollTitle (view) should match snapshot (default) 1`] = `
<div
  className="u-align-center"
>
  <h1
    className="u-margin-half"
  >
    Untitled
  </h1>
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`PollTitle (view) should match snapshot (title) 1`] = `
<div
  className="u-align-center"
>
  <h1
    className="u-margin-half"
  >
    Title A
  </h1>
  <h4>
    By Anonymous
  </h4>
</div>
`;
